tests/algorithms/x/PHP/machine_learning/linear_discriminant_analysis.bench
Fatal error: Cannot redeclare function cos() in /workspace/mochi/tests/algorithms/x/PHP/machine_learning/linear_discriminant_analysis.php on line 40